kubernetes/applications/your_spotify/your-spotify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-spotify
  namespace: media
spec:
  selector:
    app: your-spotify
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https  
    port: 443
    targetPort: 443
  type: ClusterIP
