kubernetes/applications/your_spotify/your-spotify-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-spotify-ui
  namespace: your-spotify
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: spotify.ghart.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: your-spotify
            port:
              number: 80
  tls:
  - hosts:
    - spotify.ghart.space
    secretName: spotify-tls
